--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,9 @@
     "php": ">=5.5.0"
   },
   "require-dev": {
-    "graham-campbell/testbench": "^3.1",
-    "phpunit/phpunit": "^4.8 || ^5.0"
+        "graham-campbell/testbench": "^3.1",
+        "phpunit/phpunit": "^4.8 || ^5.0",
+        "symfony/var-dumper": "^3.4"
   },
   "autoload": {
     "psr-4": {
