--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "keywords": ["json", "jsonq", "query"],
     "homepage": "https://github.com/nahid/jsonq",
     "type": "library",
-    "license": "Creative Commons",
+    "license": "CC-BY-3.0",
     "authors": [
         {
             "name": "Nahid Bin Azhar",
