--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
   },
   "require-dev": {
         "phpunit/phpunit": "^4.8 || ^5.0",
-        "symfony/var-dumper": "^3.4"
+        "symfony/var-dumper": "^3.4",
+        "graham-campbell/testbench": "^3.1"
   },
   "autoload": {
     "psr-4": {
