--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         }
     ],
   "require": {
-    "php": ">=5.5.0"
+    "php": ">=5.5.0",
+        "nahid/qarray": "^0.0.1"
   },
   "require-dev": {
         "phpunit/phpunit": "^4.8 || ^5.0",
