--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "keywords": ["json", "jsonq", "query"],
     "homepage": "https://github.com/nahid/jsonq",
     "type": "library",
-    "license": "CC0-1.0",
+    "license": "MIT",
     "authors": [
         {
             "name": "Nahid Bin Azhar",
@@ -12,17 +12,21 @@
         }
     ],
   "require": {
-    "php": ">=5.5.0"
+        "php": ">=5.6",
+        "ext-json": "*",
+        "nahid/qarray": "^2.0"
   },
   "require-dev": {
         "phpunit/phpunit": "^4.8 || ^5.0",
-        "symfony/var-dumper": "^3.4",
-        "graham-campbell/testbench": "^3.1"
+        "symfony/var-dumper": "^3.4"
   },
   "autoload": {
     "psr-4": {
       "Nahid\\JsonQ\\": "src/"
-    }
+    },
+      "files": [
+          "helpers/jsonq.php"
+      ]
   },
   "autoload-dev": {
     "psr-4": {
